prometheus/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        resources: {}
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus
      restartPolicy: Always
      volumes:
      - name: prometheus
        hostPath:
          path: /btrfs/data/volumes/default/prometheus
