prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: prometheus
spec:
  rules:
    - host: prometheus.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
